# zealous-bot

./:  commands.py  README.md  carmillaservertrivia.csv  main.py  pyproject.toml  trivia.py  weather.py
